--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,10 @@ quarkus.log.console.enable=true
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.level=DEBUG
 quarkus.log.console.color=true
-quarkus.log.category."org.acme".level=DEBUG
+quarkus.log.category."org.acme.infrastructure".level=DEBUG
+
+## Ports
+%dev.quarkus.http.port=8080
 
 # Datasource
 quarkus.datasource.db-kind=postgresql
